sdk/keyvault/arm-keyvault/samples/v3/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                        |
| ----------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [keysCreateIfNotExistSample.ts][keyscreateifnotexistsample]                                                 | Creates the first version of a new key if it does not exist. If it already exists, then the existing key is returned without any write operations being performed. This API does not create subsequent versions, and does not update existing keys. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/createKey.json           |
| [keysGetSample.ts][keysgetsample]                                                                           | Gets the current version of the specified key from the specified key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/getKey.json                                                                                                                                                                                      |
| [keysGetVersionSample.ts][keysgetversionsample]                                                             | Gets the specified version of the specified key in the specified key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/getKeyVersion.json                                                                                                                                                                               |
| [keysListSample.ts][keyslistsample]                                                                         | Lists the keys in the specified key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listKeys.json                                                                                                                                                                                                                     |
| [keysListVersionsSample.ts][keyslistversionssample]                                                         | Lists the versions of the specified key in the specified key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listKeyVersions.json                                                                                                                                                                                     |
| [managedHsmKeysCreateIfNotExistSample.ts][managedhsmkeyscreateifnotexistsample]                             | Creates the first version of a new key if it does not exist. If it already exists, then the existing key is returned without any write operations being performed. This API does not create subsequent versions, and does not update existing keys. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/managedHsmCreateKey.json |
| [managedHsmKeysGetSample.ts][managedhsmkeysgetsample]                                                       | Gets the current version of the specified key from the specified managed HSM. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/managedHsmGetKey.json                                                                                                                                                                          |
| [managedHsmKeysGetVersionSample.ts][managedhsmkeysgetversionsample]                                         | Gets the specified version of the specified key in the specified managed HSM. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/managedHsmGetKeyVersion.json                                                                                                                                                                   |
| [managedHsmKeysListSample.ts][managedhsmkeyslistsample]                                                     | Lists the keys in the specified managed HSM. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/managedHsmListKeys.json                                                                                                                                                                                                         |
| [managedHsmKeysListVersionsSample.ts][managedhsmkeyslistversionssample]                                     | Lists the versions of the specified key in the specified managed HSM. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/managedHsmListKeyVersions.json                                                                                                                                                                         |
| [managedHsmsCheckMhsmNameAvailabilitySample.ts][managedhsmscheckmhsmnameavailabilitysample]                 | Checks that the managed hsm name is valid and is not already in use. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_checkMhsmNameAvailability.json                                                                                                                                                               |
| [managedHsmsCreateOrUpdateSample.ts][managedhsmscreateorupdatesample]                                       | Create or update a managed HSM Pool in the specified subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_CreateOrUpdate.json                                                                                                                                                                            |
| [managedHsmsDeleteSample.ts][managedhsmsdeletesample]                                                       | Deletes the specified managed HSM Pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_Delete.json                                                                                                                                                                                                               |
| [managedHsmsGetDeletedSample.ts][managedhsmsgetdeletedsample]                                               | Gets the specified deleted managed HSM. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/DeletedManagedHsm_Get.json                                                                                                                                                                                                           |
| [managedHsmsGetSample.ts][managedhsmsgetsample]                                                             | Gets the specified managed HSM Pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_Get.json                                                                                                                                                                                                                     |
| [managedHsmsListByResourceGroupSample.ts][managedhsmslistbyresourcegroupsample]                             | The List operation gets information about the managed HSM Pools associated with the subscription and within the specified resource group. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_ListByResourceGroup.json                                                                                                |
| [managedHsmsListBySubscriptionSample.ts][managedhsmslistbysubscriptionsample]                               | The List operation gets information about the managed HSM Pools associated with the subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_ListBySubscription.json                                                                                                                                         |
| [managedHsmsListDeletedSample.ts][managedhsmslistdeletedsample]                                             | The List operation gets information about the deleted managed HSMs associated with the subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/DeletedManagedHsm_List.json                                                                                                                                             |
| [managedHsmsPurgeDeletedSample.ts][managedhsmspurgedeletedsample]                                           | Permanently deletes the specified managed HSM. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/DeletedManagedHsm_Purge.json                                                                                                                                                                                                  |
| [managedHsmsUpdateSample.ts][managedhsmsupdatesample]                                                       | Update a managed HSM Pool in the specified subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_Update.json                                                                                                                                                                                              |
| [mhsmPrivateEndpointConnectionsDeleteSample.ts][mhsmprivateendpointconnectionsdeletesample]                 | Deletes the specified private endpoint connection associated with the managed hsm pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_deletePrivateEndpointConnection.json                                                                                                                                      |
| [mhsmPrivateEndpointConnectionsGetSample.ts][mhsmprivateendpointconnectionsgetsample]                       | Gets the specified private endpoint connection associated with the managed HSM Pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_getPrivateEndpointConnection.json                                                                                                                                            |
| [mhsmPrivateEndpointConnectionsListByResourceSample.ts][mhsmprivateendpointconnectionslistbyresourcesample] | The List operation gets information about the private endpoint connections associated with the managed HSM Pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_ListPrivateEndpointConnectionsByResource.json                                                                                                    |
| [mhsmPrivateEndpointConnectionsPutSample.ts][mhsmprivateendpointconnectionsputsample]                       | Updates the specified private endpoint connection associated with the managed hsm pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_putPrivateEndpointConnection.json                                                                                                                                         |
| [mhsmPrivateLinkResourcesListByMhsmResourceSample.ts][mhsmprivatelinkresourceslistbymhsmresourcesample]     | Gets the private link resources supported for the managed hsm pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_listPrivateLinkResources.json                                                                                                                                                                 |
| [mhsmRegionsListByResourceSample.ts][mhsmregionslistbyresourcesample]                                       | The List operation gets information about the regions associated with the managed HSM Pool. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/ManagedHsm_ListRegionsByResource.json                                                                                                                                            |
| [operationsListSample.ts][operationslistsample]                                                             | Lists all of the available Key Vault Rest API operations. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listOperations.json                                                                                                                                                                                                |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                         | Deletes the specified private endpoint connection associated with the key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/deletePrivateEndpointConnection.json                                                                                                                                                        |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                               | Gets the specified private endpoint connection associated with the key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/getPrivateEndpointConnection.json                                                                                                                                                              |
| [privateEndpointConnectionsListByResourceSample.ts][privateendpointconnectionslistbyresourcesample]         | The List operation gets information about the private endpoint connections associated with the vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listPrivateEndpointConnection.json                                                                                                                                     |
| [privateEndpointConnectionsPutSample.ts][privateendpointconnectionsputsample]                               | Updates the specified private endpoint connection associated with the key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/putPrivateEndpointConnection.json                                                                                                                                                           |
| [privateLinkResourcesListByVaultSample.ts][privatelinkresourceslistbyvaultsample]                           | Gets the private link resources supported for the key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listPrivateLinkResources.json                                                                                                                                                                                   |
| [secretsCreateOrUpdateSample.ts][secretscreateorupdatesample]                                               | Create or update a secret in a key vault in the specified subscription. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/createSecret.json                                   |
| [secretsGetSample.ts][secretsgetsample]                                                                     | Gets the specified secret. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/getSecret.json                                                                                   |
| [secretsListSample.ts][secretslistsample]                                                                   | The List operation gets information about the secrets in a vault. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listSecrets.json                                          |
| [secretsUpdateSample.ts][secretsupdatesample]                                                               | Update a secret in the specified subscription. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/updateSecret.json                                                            |
| [vaultsCheckNameAvailabilitySample.ts][vaultschecknameavailabilitysample]                                   | Checks that the vault name is valid and is not already in use. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/checkVaultNameAvailability.json                                                                                                                                                                               |
| [vaultsCreateOrUpdateSample.ts][vaultscreateorupdatesample]                                                 | Create or update a key vault in the specified subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/createVault.json                                                                                                                                                                                                 |
| [vaultsDeleteSample.ts][vaultsdeletesample]                                                                 | Deletes the specified Azure key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/deleteVault.json                                                                                                                                                                                                                      |
| [vaultsGetDeletedSample.ts][vaultsgetdeletedsample]                                                         | Gets the deleted Azure key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/getDeletedVault.json                                                                                                                                                                                                                       |
| [vaultsGetSample.ts][vaultsgetsample]                                                                       | Gets the specified Azure key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/getVault.json                                                                                                                                                                                                                            |
| [vaultsListByResourceGroupSample.ts][vaultslistbyresourcegroupsample]                                       | The List operation gets information about the vaults associated with the subscription and within the specified resource group. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listVaultByResourceGroup.json                                                                                                                 |
| [vaultsListBySubscriptionSample.ts][vaultslistbysubscriptionsample]                                         | The List operation gets information about the vaults associated with the subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listVaultBySubscription.json                                                                                                                                                          |
| [vaultsListDeletedSample.ts][vaultslistdeletedsample]                                                       | Gets information about the deleted vaults in a subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listDeletedVaults.json                                                                                                                                                                                          |
| [vaultsListSample.ts][vaultslistsample]                                                                     | The List operation gets information about the vaults associated with the subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/listVault.json                                                                                                                                                                        |
| [vaultsPurgeDeletedSample.ts][vaultspurgedeletedsample]                                                     | Permanently deletes the specified vault. aka Purges the deleted Azure key vault. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/purgeDeletedVault.json                                                                                                                                                                      |
| [vaultsUpdateAccessPolicySample.ts][vaultsupdateaccesspolicysample]                                         | Update access policies in a key vault in the specified subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/updateAccessPoliciesAdd.json                                                                                                                                                                            |
| [vaultsUpdateSample.ts][vaultsupdatesample]                                                                 | Update a key vault in the specified subscription. x-ms-original-file: specification/keyvault/resource-manager/Microsoft.KeyVault/stable/2024-11-01/examples/updateVault.json                                                                                                                                                                                                           |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/keysCreateIfNotExistSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env KEYVAULT_SUBSCRIPTION_ID="<keyvault subscription id>" KEYVAULT_RESOURCE_GROUP="<keyvault resource group>" node dist/keysCreateIfNotExistSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[keyscreateifnotexistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/keysCreateIfNotExistSample.ts
[keysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/keysGetSample.ts
[keysgetversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/keysGetVersionSample.ts
[keyslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/keysListSample.ts
[keyslistversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/keysListVersionsSample.ts
[managedhsmkeyscreateifnotexistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmKeysCreateIfNotExistSample.ts
[managedhsmkeysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmKeysGetSample.ts
[managedhsmkeysgetversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmKeysGetVersionSample.ts
[managedhsmkeyslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmKeysListSample.ts
[managedhsmkeyslistversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmKeysListVersionsSample.ts
[managedhsmscheckmhsmnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsCheckMhsmNameAvailabilitySample.ts
[managedhsmscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsCreateOrUpdateSample.ts
[managedhsmsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsDeleteSample.ts
[managedhsmsgetdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsGetDeletedSample.ts
[managedhsmsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsGetSample.ts
[managedhsmslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsListByResourceGroupSample.ts
[managedhsmslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsListBySubscriptionSample.ts
[managedhsmslistdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsListDeletedSample.ts
[managedhsmspurgedeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsPurgeDeletedSample.ts
[managedhsmsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/managedHsmsUpdateSample.ts
[mhsmprivateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/mhsmPrivateEndpointConnectionsDeleteSample.ts
[mhsmprivateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/mhsmPrivateEndpointConnectionsGetSample.ts
[mhsmprivateendpointconnectionslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/mhsmPrivateEndpointConnectionsListByResourceSample.ts
[mhsmprivateendpointconnectionsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/mhsmPrivateEndpointConnectionsPutSample.ts
[mhsmprivatelinkresourceslistbymhsmresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/mhsmPrivateLinkResourcesListByMhsmResourceSample.ts
[mhsmregionslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/mhsmRegionsListByResourceSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/operationsListSample.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/privateEndpointConnectionsListByResourceSample.ts
[privateendpointconnectionsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/privateEndpointConnectionsPutSample.ts
[privatelinkresourceslistbyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/privateLinkResourcesListByVaultSample.ts
[secretscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/secretsCreateOrUpdateSample.ts
[secretsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/secretsGetSample.ts
[secretslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/secretsListSample.ts
[secretsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/secretsUpdateSample.ts
[vaultschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsCheckNameAvailabilitySample.ts
[vaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsCreateOrUpdateSample.ts
[vaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsDeleteSample.ts
[vaultsgetdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsGetDeletedSample.ts
[vaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsGetSample.ts
[vaultslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsListByResourceGroupSample.ts
[vaultslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsListBySubscriptionSample.ts
[vaultslistdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsListDeletedSample.ts
[vaultslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsListSample.ts
[vaultspurgedeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsPurgeDeletedSample.ts
[vaultsupdateaccesspolicysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsUpdateAccessPolicySample.ts
[vaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v3/typescript/src/vaultsUpdateSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-keyvault?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/keyvault/arm-keyvault/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
